--- a/style.css
+++ b/style.css
@@ -85,6 +85,13 @@ img {
   padding: 60px 15px;
 }
 
+@media (max-width: 600px) {
+  .introducao {
+    font-size: 2.7rem;
+    padding: 40px 15px;
+  }
+}
+
 /* Sobre */
 .sobre {
   display: flex;
@@ -114,6 +121,16 @@ img {
 
 .sobre-img {
   flex: 1 1 180px;
+}
+
+@media (max-width: 600px) {
+  .sobre {
+    padding: 40px 15px;
+  }
+
+  .sobre h2 {
+    font-size: 2.7rem;
+  }
 }
 
 /* Produtos */
@@ -154,6 +171,22 @@ img {
 
 .blue {
   border-top: 8px solid #66d9eb;
+}
+
+@media (max-width: 600px) {
+  .produtos {
+    padding: 40px 15px;
+  }
+
+  .produtos h2 {
+    font-size: 2.7rem;
+    margin-bottom: 40px;
+  }
+
+  .produtos h3 {
+    font-size: 2.7rem;
+    padding: 40px 15px;
+  }
 }
 
 /* Preço */
@@ -232,6 +265,11 @@ img {
   border: 4px solid;
 }
 
+.preco-item a:hover {
+  background: #dcdcdc;
+  transition: 0.2s;
+}
+
 @media (max-width: 800px) {
   .preco {
     padding-right: 15px;
@@ -244,5 +282,169 @@ img {
 
   .preco-item:nth-child(2) {
     order: -1;
+  }
+}
+
+@media (max-width: 600px) {
+  .preco {
+    padding: 40px 15px;
+  }
+
+  .preco-item a {
+    /* font-size: 1.9rem; */
+  }
+}
+/* Qualidade */
+.qualidade {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: start;
+  gap: 20px 25px;
+  padding: 60px 15px;
+}
+
+.qualidade-item {
+  flex: 1 1 260px;
+}
+
+.qualidade-item h3 {
+  font-size: 2.25rem;
+  color: #a4a4a4;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.qualidade h3::before {
+  display: inline-block;
+  content: "";
+  width: 8px;
+  height: 30px;
+}
+
+.qualidade-item:nth-of-type(3n + 1) h3::before {
+  background: #ae81ff;
+}
+
+.qualidade-item:nth-of-type(3n + 2) h3::before {
+  background: #f9265e;
+}
+
+.qualidade-item:nth-of-type(3n + 3) h3::before {
+  background: #122ab2;
+}
+
+.qualidade-item p {
+  font-size: 1.25rem;
+  line-height: 1.4;
+  color: #7c7c7c;
+}
+
+@media (max-width: 600px) {
+  .qualidade {
+    padding: 40px 15px;
+  }
+}
+
+/* Newsletter */
+.newsletter-bg {
+  background: #f7f7f7;
+}
+
+.newsletter {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 20px 25px;
+  padding: 60px 15px;
+}
+
+.newsletter-info {
+  flex: 1 1 240px;
+}
+
+.newsletter-info h3 {
+  font-size: 3rem;
+  color: #a4a4a4;
+}
+
+.newsletter-info p {
+  font-size: 1.25rem;
+  font-style: italic;
+  max-width: 20ch;
+  color: #7c7c7c;
+}
+
+.newsletter-form {
+  flex: 2 1 260px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input {
+  flex: 3 1 260px;
+  font-family: "Nunito", sans-serif;
+  font-size: 1.25rem;
+  font-style: italic;
+  color: #7c7c7c;
+  background: #f7f7f7;
+  border: 4px solid #2c70ff;
+  padding: 20px;
+}
+
+.newsletter-form input:focus {
+  outline: none;
+}
+
+.newsletter-form button {
+  flex: 1 1 260px;
+  font-family: "Nunito", sans-serif;
+  font-size: 2.25rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  background: #2c70ff;
+  border: 4px solid #2c70ff;
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .newsletter {
+    padding: 40px 15px;
+  }
+
+  .newsletter-info h3 {
+    font-size: 2.7rem;
+  }
+
+  .newsletter-form input {
+    padding: 10px;
+  }
+
+  .newsletter-form button {
+    font-size: 1.9rem;
+  }
+}
+
+/* Footer */
+.footer {
+  background: #2c70ff;
+  padding: 60px 15px;
+}
+
+.footer p {
+  font-size: 2.25rem;
+  text-align: center;
+  color: #122ab2;
+}
+
+@media (max-width: 600px) {
+  .footer {
+    padding: 40px 15px;
+  }
+
+  .footer p {
+    font-size: 1.9rem;
   }
 }
